implemented all sections for all screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,25 @@
         @apply lg:max-w-5xl;
     }
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #555;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #6ee7b7;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #38bdf8;
+}
